--- a/entry-9/index.html
+++ b/entry-9/index.html
@@ -3,16 +3,87 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+        <title>The hardest "no" of my life</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <h1>The hardest "no" of my life</h1>
+            <div class="content">
+                <div class="photo-right">
+                    <div class="text">
+                        <p>
+                            - Why?<br>
+                            - I guess for the wrong reasons.<br>
+                            - How so?<br>
+                            - It pains me to say no to her because I feel responsible for her life, I feel responsible for her situation, and I feel responsible for her past.<br>
+                        </p>
+                        <p>
+                            But if you feel responsible, then why are you saying no?<br>
+                            - Don’t you think it’s a selfish decision?<br>
+                            - Yes, I think it is. But sometimes, even though it hurts, you have to take the selfish path.<br>
+                        </p>
+                    </div>
+                    <div image-container class="heart">
+                        <img src="../assets/foto1.jpg" alt="" >
+                    </div>
+                </div>
+
+                <p>
+                    - Don’t you love her?<br>
+                    - I’d be lying if I said no, but I’d also be lying if I said yes. Right now, I don’t know. I always said that the clearest symptom of love is putting the other person’s well-being above your own.<br>
+                </p>
+                <p>
+                    - So, if you’re being selfish, it’s because you don’t love her.<br>
+                    - It’s not that simple; I told you it’s the hardest “no” of my life.<br>
+                    He shakes his head and sighs before continuing.<br>
+                    - Maybe I don’t love her. But I’d like to have the clarity to definitively say I don’t. “Maybe” isn’t enough.<br>
+                </p>
+                <p>
+                    - Not enough for what?<br>
+                    - To make this “no” easier. To not feel bad about this “no,” to not feel like I’m messing up her life with this “no,” to not feel that my selfishness is destroying someone else’s life.<br>
+                </p>
+                <p>
+                    - Do you think it’s healthy to feel like that?<br>
+                    - Healthy… no, it hasn’t been healthy for a long time.<br>
+                    - Isn’t it enough to know that and let her go?<br>
+                    - Being healthy isn’t that important.<br>
+                </p>
+                <p>    
+                    - Then what is important?<br>
+                    - The same as always. You know. That thing about trying to be happy because it’s more entertaining than dedicating your life to anything else. That thing about breathing with joy and enjoying the present because it’s all that exists. That thing about walking through the park, looking at the sky, and not having to think about how to find the money to support her. How to find the money for her studies. How to support her so she can make it.<br>
+                </p>
+                <p>
+                    - You sound convinced enough.<br>
+                    - It’s not that simple. I’ve given her everything. I’d like to see the fruits of my efforts, I’d like to see her achieve things. I know “giving her everything” sounds exaggerated. But right now, it’s not. But I’ve tried everything, and you don’t understand, but everything is… everything. I gave her my energy, I gave her my money, I gave her my knowledge, I gave her my family, I gave her my opinion, I gave her my family’s opinion.<br>
+                    <br>
+                    He laughs and continues.<br>
+                </p>
+                <p>
+                    - I gave her my computer… three times, I gave her my experience, I gave her my creativity; I gave her my pain, I gave her my patience, all the love I had and all that I didn’t have… I even borrowed patience from the neighbor;<br>
+                </p>
+                <p>
+                    - I gave her my nights of reflection, I dedicated a text to her, I gave her my friends, I gave her my priorities, above myself; I gave her my word, which I’m breaking right now;<br>
+                </p>
+                <p>
+                    - I gave her my thoughts; I gave her my tears (many times); I gave her my way of learning; I gave her time, all the time she wanted, I gave her my love and I gave her my hate.<br>
+                </p>
+                <p>
+                    - I learned from her, I listened to her, I defended her, I gave her my love and I gave her my hate,<br>
+                    New York, the cheese,<br>
+                    I actually learned good things from her, like: fruits, grapes to be specific; movies, although it pains me to admit it; cooking a little, don’t let anyone tell you otherwise; music, I didn’t listen to music before you;<br>
+                    the most complicated song I would want to write would be the one I’d make for you;<br>
+                    I enjoy playing with you, I’ll have to delete this;<br>
+                    Damn you, I love you. How sad. (shrug)<br>
+                </p>
+
+            </div>
+        </div>
         
-        <script src="" async defer></script>
+        <script src="script.js" async defer></script>
     </body>
 </html>
