--- a/index.html
+++ b/index.html
@@ -6,34 +6,36 @@
         <title>Shared Isolation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--Font P22 Zanner-->
         <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
         <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
-        <div class="header">
+        <div class="content">
+            <div class="banner">
+                <p id="author">Lucia Vanegas</p>
+            </div>
+
+            <div class="header">
                 <h1>
                     Sha<span id="r">r</span>ed Isolation
                 </h1>
+            </div>
+
+            <div class="entries">
+                <a href="entry-1/index.html">Loneliness</a>
+                <a href="entry-2/index.html">When I was ...</a>
+                <a href="entry-3/index.html">House Taken Over</a>
+                <a href="entry-8/index.html">The Nobodies</a>
+                <a href="entry-4/index.html">The hardest no of my life</a>
+                <a href="entry-6/index.html">Max Ernst, the Birdman</a>
+                <a href="entry-7/index.html">The Land Of Oblivion</a>
+                <a href="entry-5/index.html">The Artist Way</a>
+                <a href="entry-9/index.html">100 Years of Solitude</a>
+                <a href="entry-10/index.html">Final Reflection</a>
+            </div>
         </div>
-        <h2>Lucia Vanegas</h2>
-        <div class="entries">
-                <!--Lonely in the world - Isolation-->
-                <a href="../luciav416.github.io/entry-2/index.html" class="entries-child">The Nobodies</a>
-                <!--Lonely in the house-->
-                <a href="../luciav416.github.io/entry-1/index.html" class="entries-child">House Taken Over</a>
-                <!--Homesick-->
-                <a href="../luciav416.github.io/entry-3/index.html" class="entries-child">The Land Of Oblivion</a>
-                <a href="../luciav416.github.io/entry-4/index.html" class="entries-child">4</a>
-                <a href="../luciav416.github.io/entry-5/index.html" class="entries-child">5</a>
-                <a href="../luciav416.github.io/entry-6/index.html" class="entries-child">6</a>
-                <a href="../luciav416.github.io/entry-7/index.html" class="entries-child">7</a>
-                <!--
-                <a href="../luciav416.github.io/entry-8/index.html" class="entries-child">8</a>
-                <a href="../luciav416.github.io/entry-9/index.html" class="entries-child">9</a>
-                <a href="../luciav416.github.io/entry-10/index.html" class="entries-child">10</a>
-                -->
-                <script src="script.js"></script>
-        </div>
+        
+        <script src="script.js"></script>
     </body>
 </html>
