--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <header id="shrink-header">
+        <header id="full-header">
             <h1>
                 .Shared Isolation
             </h1>
