--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <div id="container">
-        <header id="full-header">
-            <h1>
+        <header id="header">
+            <h1 id="header-text">
                 .Shared Isolation
             </h1>
             <div id="scroll-text">
