--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <p id="my-name">
                 Lucia Vanegas
             </p>
+            <p id="class-name">
+                Core 1: Interaction
+            </p>
         </footer>
     </div>
     <script src="script.js" async defer></script>
