--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </p>
         </footer>
     </div>
-    <script src="script.js" async defer></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
