--- a/entry-8/index.html
+++ b/entry-8/index.html
@@ -6,6 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -13,36 +14,44 @@
         <!--Random-->
         <!--Escrito-->
         <!--Fotos latinos-->
-        <h1>The Nobodies</h1>
+        <header>
+            <p class="header-text">Shared Isolation</p>
+            <a href="/index.html" class="header-text">Main Page</a>
+        </header>
+        <div id="content">
+            <h1>The Nobodies</h1>
         <h2>Los Nadies</h2>
         <h3>by Eduardo Galeano</h3>
-        <p>
-            <span id="word0">Sueñan</span> <span id="word1">las pulgas</span> <span id="word2">con comprarse</span> <span id="word3">un perro</span> <br>
-            <span id="word4">y sueñan</span> <span id="word5">los nadies</span> <span id="word6">con salir</span> <span id="word7">de pobres.</span> <br>
-            <span id="word8">que algún</span> <span id="word9">mágico día</span> <span id="word10">llueva</span> <span id="word11">de pronto</span> <span id="word12">la buena suerte,</span> <br>
-            <span id="word13">que llueva</span> <span id="word14">a cántaros</span> <span id="word15">la buena suerte</span> <br>
-            <span id="word16">pero</span> <span id="word17">la buena suerte</span> <span id="word18">no llueve</span> <span id="word19">ayer,</span> <span id="word20">ni hoy,</span> <span id="word21">ni mañana,</span> <span id="word22">ni nunca,</span> <br>
-            <span id="word23">ni en llovizna</span> <span id="word24">cae del cielo</span> <span id="word25">la buena suerte,</span> <br>
-            <span id="word26">por mucho</span> <span id="word27">que</span> <span id="word28">los nadies</span> <span id="word29">la llamen</span> <br>
-            <span id="word30">y aunque</span> <span id="word31">les pique</span> <span id="word32">la mano izquierda,</span> <br>
-            <span id="word33">o</span> <span id="word34">se levanten</span> <span id="word35">con el</span> <span id="word36">pie derecho,</span> <br>
-            <span id="word37">o empiecen</span> <span id="word38">el año</span> <span id="word39">cambiando</span> <span id="word40">de escoba.</span> <br>
-            <span id="word41">Los nadies:</span> <span id="word42">los hijos de nadie,</span> <span id="word43">los dueños</span> <span id="word44">de nada.</span> <br>
-            <span id="word45">Los nadies:</span> <span id="word46">los ningunos,</span> <span id="word47">los ninguneados,</span> <br>
-            <span id="word48">corriendo</span> <span id="word49">la liebre,</span> <span id="word50">muriendo</span> <span id="word51">la vida,</span> <br>
-            <span id="word52">jodidos,</span> <span id="word53">rejodidos:</span> <br>
-            <span id="word54">Que no son,</span> <span id="word55">aunque sean.</span> <br>
-            <span id="word56">Que no</span> <span id="word57">hablan idiomas,</span> <span id="word58">sino dialectos.</span> <br>
-            <span id="word59">Que no</span> <span id="word60">profesan</span> <span id="word61">religiones,</span> <span id="word62">sino supersticiones.</span> <br>
-            <span id="word63">Que no</span> <span id="word64">hacen arte,</span> <span id="word65">sino artesanía.</span> <br>
-            <span id="word66">Que no</span> <span id="word67">práctican cultura,</span> <span id="word68">sino folklore.</span> <br>
-            <span id="word69">Que no son</span> <span id="word70">seres humanos,</span> <span id="word71">sino recursos.</span> <br>
-            <span id="word72">Que no</span> <span id="word73">tienen cara,</span> <span id="word74">sino brazos.</span> <br>
-            <span id="word75">Que no</span> <span id="word76">tienen nombre,</span> <span id="word77">sino número.</span> <br>
-            <span id="word78">Que no</span> <span id="word79">figuran en</span> <span id="word80">la historia</span> <span id="word81">universal</span> <br>
-            <span id="word82">sino en la</span> <span id="word83">crónica roja</span> <span id="word84">de la</span> <span id="word85">prensa local.</span> <br>
-            <span id="word86">Los nadies,</span> <span id="word87">que cuestan</span> <span id="word88">menos</span> <span id="word89">que la bala</span> <span id="word90">que los mata.</span> 
-        </p>
+        <main>
+            <p>
+                <span id="word0">Sueñan</span> <span id="word1">las pulgas</span> <span id="word2">con comprarse</span> <span id="word3">un perro</span> <br>
+                <span id="word4">y sueñan</span> <span id="word5">los nadies</span> <span id="word6">con salir</span> <span id="word7">de pobres.</span> <br>
+                <span id="word8">que algún</span> <span id="word9">mágico día</span> <span id="word10">llueva</span> <span id="word11">de pronto</span> <span id="word12">la buena suerte,</span> <br>
+                <span id="word13">que llueva</span> <span id="word14">a cántaros</span> <span id="word15">la buena suerte</span> <br>
+                <span id="word16">pero</span> <span id="word17">la buena suerte</span> <span id="word18">no llueve</span> <span id="word19">ayer,</span> <span id="word20">ni hoy,</span> <span id="word21">ni mañana,</span> <span id="word22">ni nunca,</span> <br>
+                <span id="word23">ni en llovizna</span> <span id="word24">cae del cielo</span> <span id="word25">la buena suerte,</span> <br>
+                <span id="word26">por mucho</span> <span id="word27">que</span> <span id="word28">los nadies</span> <span id="word29">la llamen</span> <br>
+                <span id="word30">y aunque</span> <span id="word31">les pique</span> <span id="word32">la mano izquierda,</span> <br>
+                <span id="word33">o</span> <span id="word34">se levanten</span> <span id="word35">con el</span> <span id="word36">pie derecho,</span> <br>
+                <span id="word37">o empiecen</span> <span id="word38">el año</span> <span id="word39">cambiando</span> <span id="word40">de escoba.</span> <br>
+                <span id="word41">Los nadies:</span> <span id="word42">los hijos de nadie,</span> <span id="word43">los dueños</span> <span id="word44">de nada.</span> <br>
+                <span id="word45">Los nadies:</span> <span id="word46">los ningunos,</span> <span id="word47">los ninguneados,</span> <br>
+                <span id="word48">corriendo</span> <span id="word49">la liebre,</span> <span id="word50">muriendo</span> <span id="word51">la vida,</span> <br>
+                <span id="word52">jodidos,</span> <span id="word53">rejodidos:</span> <br>
+                <span id="word54">Que no son,</span> <span id="word55">aunque sean.</span> <br>
+                <span id="word56">Que no</span> <span id="word57">hablan idiomas,</span> <span id="word58">sino dialectos.</span> <br>
+                <span id="word59">Que no</span> <span id="word60">profesan</span> <span id="word61">religiones,</span> <span id="word62">sino supersticiones.</span> <br>
+                <span id="word63">Que no</span> <span id="word64">hacen arte,</span> <span id="word65">sino artesanía.</span> <br>
+                <span id="word66">Que no</span> <span id="word67">práctican cultura,</span> <span id="word68">sino folklore.</span> <br>
+                <span id="word69">Que no son</span> <span id="word70">seres humanos,</span> <span id="word71">sino recursos.</span> <br>
+                <span id="word72">Que no</span> <span id="word73">tienen cara,</span> <span id="word74">sino brazos.</span> <br>
+                <span id="word75">Que no</span> <span id="word76">tienen nombre,</span> <span id="word77">sino número.</span> <br>
+                <span id="word78">Que no</span> <span id="word79">figuran en</span> <span id="word80">la historia</span> <span id="word81">universal</span> <br>
+                <span id="word82">sino en la</span> <span id="word83">crónica roja</span> <span id="word84">de la</span> <span id="word85">prensa local.</span> <br>
+                <span id="word86">Los nadies,</span> <span id="word87">que cuestan</span> <span id="word88">menos</span> <span id="word89">que la bala</span> <span id="word90">que los mata.</span> 
+            </p>
+        </main>
+        </div>
         <script src="script.js" async defer></script>
     </body>
 </html>
