--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -119,6 +119,9 @@
                         <p>I still had my wristwatch on and saw that it was 11 P.M.. I took Irene around the waist (I think she was crying) and that was how we went into the street. Before we left, I felt terrible; I locked the front door up tight and tossed the key down the sewer. It wouldn't do to have some poor devil decide to go in and rob the house, at that hour and the difference with the house taken over.</p>                        
                     </div>                 
                 </div>
+                <div>
+                    <img src="../assets/Imagen_mujer-mirando-rio-magdalena.jpg">
+                </div>
             </div>
                 </div>
             </div>
