--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -120,7 +120,7 @@
                     </div>                 
                 </div>
                 <div>
-                    <img src="../assets/Imagen_mujer-mirando-rio-magdalena.jpg">
+                    <img src="../assets/Imagen_mujer-mirando-rio-magdalena.jpg" id="last-image">
                 </div>
             </div>
                 </div>
