--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -1,4 +1,75 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>House Taken Over</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
+        <link rel="stylesheet" href="../entry-3/style.css">
+    </head>
+    <body>
+        <div id="container">
+            <header>
+                <a href="../entry-2/index.html" class="header-text">When I Was 7 Years Old...</a>
+                <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
+                <a href="/entry-4/index.html" class="header-text">Entry 4</a>
+            </header>
+            <main>
+                <h1>House Taken Over</h1>
+                <div id="image">
+                    <div id="background-house"></div>
+                    <div id="roof-1"></div>
+                    <div id="roof-2"></div>
+                    <div id="roof-center"></div>
+                    <div class="window" id="w1"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div class="window" id="w"></div>
+                    <div id="background-house-entrance"></div>
+                    
+                </div>
+            </main>
+            <footer>
+                <p id="my-name">Lucia Vanegas</p>
+                <p id="entry-name">CSS</p>
+                <p id="class-name">Core 1: Interaction</p>
+            </footer>
+        </div>        
+        <script src="" async defer></script>
+    </body>
+</html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -129,4 +200,4 @@
 
         <script src="script.js" async defer></script>
     </body>
-</html>
+</html> -->
