--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -28,13 +28,13 @@
                     <div id="roof-2"></div>
                     <div id="roof-center"></div>
                     <div class="window" id="w1"></div>
-                    <div class="window" id="w"></div>
-                    <div class="window" id="w"></div>
-                    <div class="window" id="w"></div>
-                    <div class="window" id="w"></div>
-                    <div class="window" id="w"></div>
-                    <div class="window" id="w"></div>
-                    <div class="window" id="w"></div>
+                    <div class="window" id="w2"></div>
+                    <div class="window" id="w3"></div>
+                    <div class="window" id="w4"></div>
+                    <div class="window" id="w5"></div>
+                    <div class="window" id="w6"></div>
+                    <div class="window" id="w7"></div>
+                    <div class="window" id="w8"></div>
                     <div class="window" id="w"></div>
                     <div class="window" id="w"></div>
                     <div class="window" id="w"></div>
