--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -16,7 +16,7 @@
                 <a href="/entry-2/index.html" class="header-text">When I Was 7 Years Old</a>
             </header>
             <main>
-                <h1> What is Loneliness? </h1>
+                <h1> What Is Loneliness? </h1>
                 <section id="first-section">
                     <p id="first-paragraph"> Loneliness is a universal yet deeply personal experience that arises when our
                         social connections feel insufficient. It's not just about being alone; loneliness stems from a gap
