--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -12,12 +12,12 @@
     <body>
         <div id="container">
             <header>
-                <a href="../entry-1/index.html" class="header-text">What is Loneliness?</a>
+                <a href="../entry-1/index.html" class="header-text">What Is Loneliness?</a>
                 <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
                 <a href="/entry-3/index.html" class="header-text">House Taken Over</a>
             </header>
             <main>
-                <h1>When I was 7 years old...</h1>
+                <h1>When I Was 7 Years Old...</h1>
                 <div class="text-image">
                     <div class="text">
                         <p> People say there’s a moment in every child’s life when they become aware of their own existence.
