--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -14,7 +14,7 @@
             <header>
                 <a href="../entry-3/index.html" class="header-text">House Taken Over</a>
                 <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-5/index.html" class="header-text">Entry 5</a>
+                <a href="/entry-5/index.html" class="header-text">The Hardest “No” of My Life</a>
             </header>
             <main>
                 <h1>The Nobodies</h1>
