--- a/entry-8/index.html
+++ b/entry-8/index.html
@@ -7,14 +7,14 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="container">
             <header>
-                <a href="../entry-4/index.html" class="header-text">Entry 7</a>
+                <a href="../entry-7/index.html" class="header-text">Entry 7</a>
                 <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-6/index.html" class="header-text">Entry 9</a>
+                <a href="/entry-9/index.html" class="header-text">Entry 9</a>
             </header>
             <main>
     
